--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,5 +1,8 @@
-name: Build, Test, and Deploy
-'on': pull_request
+on:
+    push:
+        branches:
+            - master
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -11,53 +14,40 @@ jobs:
                 with:
                     path: ./node_modules
                     key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
-            -   name: Install Packages
+            -   name: Install packages
                 run: npm install
             -   name: Build Project
-                run: npm run build:staging
+                run: npm run build:ci
             -   name: Upload build artifacts
                 uses: actions/upload-artifact@v4
                 with:
-                    name: ci-build
+                    name: deployment-build
                     path: |
                         dist
-                        database.rules.json
                         firebase.json
+                        database.rules.json
     deploy:
-        needs: build
         runs-on: ubuntu-latest
+        needs: build
         steps:
-#            -   name: Checkout
-#                uses: actions/checkout@v4
             -   name: Download artifacts
                 uses: actions/download-artifact@v4
                 with:
-                    name: ci-build
-            -   name: Deploy Preview
+                    name: deployment-build
+            -   name: Deploy site
                 uses: FirebaseExtended/action-hosting-deploy@v0
                 with:
                     repoToken: ${{ secrets.GITHUB_TOKEN }}
                     firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DATE_IDEA_SCRAMBLER }}
+                    channelId: live
+                    projectId: date-idea-scrambler
+            -   name: Deploy database rules
+                uses: DuncanMcPherson/action-database-deploy@v1
+                with:
+                    firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DATE_IDEA_SCRAMBLER }}
                     projectId: date-idea-scrambler
     test:
-        if: always()
-        needs: build
         runs-on: ubuntu-latest
-        steps:
-            -   name: Checkout
-                uses: actions/checkout@v4
-            -   name: Cache Node Modules
-                uses: actions/cache@v3
-                with:
-                    path: ./node_modules
-                    key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
-            -   name: Install packages
-                run: npm ci
-            -   name: Run Tests
-                run: npm run test:ci
-            -   name: Upload test results
-                uses: actions/upload-artifact@v4
-                with:
-                    name: test-results
-                    path: test-results
-# TODO: upload test results
+    coverage-results:
+        runs-on: ubuntu-latest
+        needs: test
