--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "ng serve --open --configuration development",
 		"build": "ng build",
 		"build:ci": "ng build --configuration production",
+		"build:staging": "ng build --configuration development",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"test:ci": "ng test --no-watch --browsers ChromeHeadless"
