--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -42,7 +42,7 @@ jobs:
                     channelId: live
                     projectId: date-idea-scrambler
             -   name: Deploy database rules
-                uses: DuncanMcPherson/action-database-deploy@v1
+                uses: DuncanMcPherson/action-database-deploy
                 with:
                     firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DATE_IDEA_SCRAMBLER }}
                     projectId: date-idea-scrambler
