--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
 		"zone.js": "~0.14.3"
 	},
 	"devDependencies": {
+		"@actions/core": "^1.10.1",
+		"@actions/exec": "^1.1.1",
+		"@actions/github": "^6.0.0",
 		"@angular-devkit/build-angular": "^17.3.4",
 		"@angular/cli": "^17.3.4",
 		"@angular/compiler-cli": "^17.3.0",
