--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -42,11 +42,10 @@ jobs:
                     firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DATE_IDEA_SCRAMBLER }}
                     channelId: live
                     projectId: date-idea-scrambler
-            -   name: Set up gcloud
-                uses: google-github-actions/setup-gcloud@v2
             -   name: Deploy database rules
                 uses: DuncanMcPherson/action-database-deploy@master
                 with:
+                    repoToken: ${{ secrets.GITHUB_TOKEN }}
                     firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DATE_IDEA_SCRAMBLER }}
                     projectId: date-idea-scrambler
 #    test:
