--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 		"@angular-devkit/build-angular": "^17.3.4",
 		"@angular/cli": "^17.3.4",
 		"@angular/compiler-cli": "^17.3.0",
+		"@types/chance": "^1.1.6",
 		"@types/jasmine": "~5.1.0",
+		"chance": "^1.1.11",
 		"jasmine-core": "~5.1.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
