--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -66,7 +66,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   name: Download test results
-                uses: actions/download-artifact
+                uses: actions/download-artifact@v4
                 with:
                     name: test-results
             -   name: Publish test results
