--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build:staging": "ng build --configuration development",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
-		"test:ci": "ng test --no-watch --browsers ChromeHeadless"
+		"test:ci": "ng test --no-watch --browsers ChromeHeadless \"--reporters=junit,coverage\""
 	},
 	"private": true,
 	"dependencies": {
@@ -42,6 +42,7 @@
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
+		"karma-junit-reporter": "^2.0.1",
 		"typescript": "~5.4.2"
 	}
 }
