--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build:staging": "ng build --configuration development",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
-		"test:ci": "ng test --no-watch --browsers ChromeHeadless \"--reporters=junit,coverage\""
+		"test:ci": "ng test --no-watch --browsers ChromeHeadless \"--reporters=junit\" --code-coverage"
 	},
 	"private": true,
 	"dependencies": {
