--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@angular/platform-browser": "^17.3.0",
 		"@angular/platform-browser-dynamic": "^17.3.0",
 		"@angular/router": "^17.3.0",
+		"@ngxs/store": "^3.8.2",
 		"@types/lodash-es": "^4.17.12",
 		"bootstrap": "^5.3.3",
 		"firebase": "^10.11.0",
